Coverage (#244)
* Upgrade to Junit5 with coverage data