@@ -15,7 +15,7 @@
     <properties>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../../${spring.mvc.aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+            <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../../coverage-report/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
 
@@ -48,8 +48,8 @@
             <artifactId>bo-framework-metadata</artifactId>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -67,13 +67,33 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>
-                        --add-opens java.base/java.lang=orika.core --add-opens bo.framework.orika.mapper/org.divy.common.bo.mapper.defaults=orika.core
+                        --add-opens java.base/java.lang=orika.core
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens bo.framework.orika.mapper/org.divy.common.bo.mapper.defaults=orika.core
+                        --illegal-access=permit
+                        @{argLine}
+                        ${argLine}
                     </argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>coverage</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
